2003-02-17  Tim Coleman <tim@timcoleman.com>
	* Test/TestOracleClient.cs:
		Add OracleDataAdapter test.
	* System.Data.OracleClient/OracleDataAdapter.cs:
	* System.Data.OracleClient/OracleRowUpdatedEventArgs.cs:
	* System.Data.OracleClient/OracleRowUpdatedEventHandler.cs:
	* System.Data.OracleClient/OracleRowUpdatingEventArgs.cs:
	* System.Data.OracleClient/OracleRowUpdatingEventHandler.cs:
	* list:
		New classes added.
	* System.Data.OracleClient/OracleDataReader.cs:
	* System.Data.OracleClient.Oci/OciDefineHandle.cs:
		Add handling for number and date types in OracleDataReader
		GetValue

2003-02-16  Daniel Morgan <danmorg@sc.rr.com>

	* System.Data.OracleClient.Oci/OciStatementHandle.cs
	* System.Data.OracleClient.Oci/OciColumnInfo.cs
	* System.Data.OracleClient/OciGlue.cs
	* System.Data.OracleClient/OracleDataReader.cs: fixes
	  to display character data in SQL# command-line 
	  and GTK# versions
	
	* Test/TestOracleClient.cs: updated test to
	  include reading data via the OracleDataReader
	
	* System.Data.OracleClient/OracleConnection.cs: removed
	  debug code

2003-02-13  Tim Coleman <tim@timcoleman.com>
	* System.Data.OracleClient.Oci/OciColumnInfo.cs:
	* System.Data.OracleClient.Oci/OciDataType.cs:
	* System.Data.OracleClient.Oci/OciDefineHandle.cs:
	* list:
		New classes added
	* System.Data.OracleClient/OciGlue.cs:
		Changes to AttrGet functions
	* System.Data.OracleClient/OracleCommand.cs:
	* System.Data.OracleClient/OracleDataReader.cs:
		Start some work on getting data reader going
	* System.Data.OracleClient.Oci/OciAttributeType.cs:
		Add DisplayName
	* System.Data.OracleClient.Oci/OciStatementHandle.cs:
		Add code to get schema for query, as well as
		define output values.

2003-02-12  Tim Coleman <tim@timcoleman.com>
	* System.Data.OracleClient/OracleException.cs:
	* System.Data.OracleClient.Oci/IOciHandle.cs:
	* System.Data.OracleClient.Oci/OciEnvironmentHandle.cs:
	* System.Data.OracleClient.Oci/OciErrorHandle.cs: